chore: seal after refactor
Signed-off-by: Sam Gammon <sam@elide.ventures>